2001-02-07  Pavel Roskin  <proski@gnu.org>

	* c-bs-a.m4: Quote first argument of AC_DEFUN.
	* codeset.m4: Likewise.
	* gettext.m4: Likewise.
	* iconv.m4: Likewise.
	* inttypes_h.m4: Likewise.
	* isc-posix.m4: Likewise.
	* lcmessage.m4: Likewise.
	* libtool.m4: Likewise.
	* progtest.m4: Likewise.
	* setlocale.m4: Likewise.
	* uintmax_t.m4: Likewise.
	* ulonglong.m4: Likewise.

2001-01-21  Bruno Haible  <haible@clisp.cons.org>

	Use libtool.
	* libtool.m4: New file, from libtool-1.3.5.
	* Makefile.am (EXTRA_DIST): Add it.
	* gettext.m4 (AM_WITH_NLS): Accept 'use-libtool' as first argument.
	New variable BUILD_INCLUDED_LIBINTL. Don't force USE_NLS, force only
	BUILD_INCLUDED_LIBINTL.
	Remove unused variable INTLDEPS.
	Fix value of INTLLIBS to match documentation.
	Avoid unwanted matches of po/Makefile.in with AC_OUTPUT argument.
	(AM_GNU_GETTEXT): Accept 'use-libtool' as first argument. Rename
	variable l to INTL_LIBTOOL_SUFFIX_PREFIX.

2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Change computation of NEW_LINGUAS to
	not include catalogs which are not present. Reported by Fredrik
	Hallenberg. Also include catalogs of which a variant is requested.

2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Add a third argument to AC_DEFINE.
	* lcmessage.m4 (AM_LC_MESSAGES): Likewise.

2001-01-15  Bruno Haible  <haible@clisp.cons.org>

	* iconv.m4 (AM_ICONV): Also check whether the iconv declaration
	has const.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Remove third argument. Don't call
	AC_LINK_FILES. Now done through simple file copy in intl/Makefile.in.
	(AM_GNU_GETTEXT): Remove GT_NO and GT_YES macros.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_GNU_GETTEXT): Assume <locale.h> exists.
	* setlocale.m4 (gt_SETLOCALE): Likewise.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	Remove catgets fallback code.