@@ -1,3 +1,8 @@
+2001-03-03  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.am (LDADD): Add @LIBICONV@. Needed on platforms where
+	iconv() is not in libc.
+
 2001-01-21  Bruno Haible  <haible@clisp.cons.org>
 
 	Use libtool.
